<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<resources>
    <string name="app_about">About</string>
    <string name="app_cancel">Cancel</string>
    <string name="app_column">Column</string>
    <string name="app_complete">Complete</string>
    <string name="app_downloaded">%1$s download</string>
    <string name="app_download">download</string>
    <string name="app_failed">Failed</string>
    <string name="app_favorite">Favorite</string>
    <string name="app_github">GitHub</string>
    <string name="app_go">GO</string>
    <string name="app_ok">OK</string>
    <string name="app_artist">Artist</string>
    <string name="app_page_jump">Page number</string>
    <string name="app_page_number">%1$d/%2$d</string>
    <string name="app_pre_release">pre-release</string>
    <string name="app_process_text_error">find text menu error: %1$s.</string>
    <string name="app_resolution">%1$dx%2$d[%3$s]</string>
    <string name="app_retry">retry</string>
    <string name="app_save">Save</string>
    <string name="app_search">Search</string>
    <string name="app_settings">Settings</string>
    <string name="app_share">Share</string>
    <string name="app_similar">Similar images</string>
    <string name="app_update">Check Update</string>
    <string name="app_update_error">Check update error.</string>
    <string name="app_update_ignore">Ignore version</string>
    <string name="app_version">%1$s v%2$s.%3$s</string>
    <string name="app_channel_download">Download Notification</string>
    <string name="app_channel_description">Please open the application notification settings, otherwise you won\'t see the download task notifications.</string>
    <string name="app_channel_dismiss">Dismiss</string>
    <string name="app_channel_continue">Continue</string>

    <string name="download_exists">You have already downloaded it. Do you need to download it again?</string>
    <string name="download_ready">Ready</string>
    <string name="download_started">Downloading has started. Please wait.</string>
    <string name="download_running">It\'s already in the download queue. Please wait.</string>

    <string name="popular_by_day">Popular by day</string>
    <string name="popular_by_month">Popular by month</string>
    <string name="popular_by_week">Popular by week</string>
    <string name="popular_by_year">Popular by year</string>
    <string name="popular_by_all">Popular of all</string>
    <string name="popular_by_day_for">Popular %1$s by day</string>
    <string name="popular_by_month_for">Popular %1$s by month</string>
    <string name="popular_by_week_for">Popular %1$s by week</string>
    <string name="popular_by_year_for">Popular %1$s by year</string>

    <string name="query_date">Date</string>
    <string name="query_date_desc">Query posts with a certain date of ….</string>
    <string name="query_empty">"Invalid input "</string>
    <string name="query_height">Height</string>
    <string name="query_height_desc">Query posts with a height of ….</string>
    <string name="query_id">ID</string>
    <string name="query_id_desc">Query posts with an ID number of ….</string>
    <string name="query_keyword">Keyword</string>
    <string name="query_keyword_desc">Query posts with a keyword of ….</string>
    <string name="query_md5">MD5</string>
    <string name="query_md5_desc">Query posts with the MD5 hash ….</string>
    <string name="query_mpixels">Mpixels</string>
    <string name="query_mpixels_desc">Query posts with a pixels of … million.</string>
    <string name="query_order">Order</string>
    <string name="query_order_desc">Order query results based on post ….</string>
    <string name="query_order_id">Order query results in ascending order based on post ID.</string>
    <string name="query_order_id_desc">Order query results in descending order based on post ID.</string>
    <string name="query_order_landscape">Order landscape images first.</string>
    <string name="query_order_mpixels">Order query results in descending order based on resolution.</string>
    <string name="query_order_mpixels_asc">Order query results in descending order based on resolution.</string>
    <string name="query_order_portrait">Order portrait images first.</string>
    <string name="query_order_score">Order query results in descending order based on post score.</string>
    <string name="query_order_score_asc">Order query results in ascending order based on post score.</string>
    <string name="query_order_vote">Order by when the post was voted (only valid when doing a vote search)</string>
    <string name="query_parent">Parent</string>
    <string name="query_parent_desc">Query posts that have … as a parent (and include post …).</string>
    <string name="query_pool">Pool</string>
    <string name="query_pool_desc">Query posts with a pool of ….</string>
    <string name="query_rating">Rating</string>
    <string name="query_rating__explicit">Query posts that are not rated explicit.</string>
    <string name="query_rating__questionable">Query posts that are not rated questionable.</string>
    <string name="query_rating__safe">Query posts that are not rated safe.</string>
    <string name="query_rating_desc">Query posts that are rated ….</string>
    <string name="query_rating_explicit">Query posts that are rated explicit.</string>
    <string name="query_rating_questionable">Query posts that are rated questionable.</string>
    <string name="query_rating_safe">Query posts that are rated safe.</string>
    <string name="query_score">Score</string>
    <string name="query_score_desc">Query posts with a score of ….</string>
    <string name="query_sheet_begin">Begin</string>
    <string name="query_sheet_end">End</string>
    <string name="query_source">Source</string>
    <string name="query_source_desc">Query posts with a source that starts with ….</string>
    <string name="query_user">User</string>
    <string name="query_user_desc">Query posts uploaded by the user ….</string>
    <string name="query_value_bt">Between</string>
    <string name="query_value_eq">Equal</string>
    <string name="query_value_ge">Greater than or equal</string>
    <string name="query_value_gt">Greater than</string>
    <string name="query_value_le">Less than or equal</string>
    <string name="query_value_lt">Less than</string>
    <string name="query_date_countdown">Use countdown time</string>
    <string name="query_vote">Vote</string>
    <string name="query_vote_desc">Query posts favored by the user ….</string>
    <string name="query_vote_star_1">★</string>
    <string name="query_vote_star_2">★★</string>
    <string name="query_vote_star_3">★★★</string>
    <string name="query_vote_star_title">%1$s [%2$d]</string>
    <string name="query_vote_star_yours">You star %1$d</string>
    <string name="query_vote_user">User</string>
    <string name="query_width">Width</string>
    <string name="query_width_desc">Query posts with a width of ….</string>

    <string name="saved_edit">Edit</string>
    <string name="saved_pin">Pin</string>
    <string name="saved_pin_desc">Pin to main page</string>
    <string name="saved_pin_move">Order by long press</string>
    <string name="saved_tags">Tags</string>
    <string name="saved_tags_swipe">Delete by swipe left</string>
    <string name="saved_title">Save tag</string>

    <string name="settings_animation">Switch page animation</string>
    <string-array name="settings_animation_names">
        <item>Shared Elements</item>
        <item>Elevation Scale</item>
        <item>Fade Through</item>
        <item>Axis X</item>
        <item>Axis Y</item>
        <item>Axis Z</item>
        <item>Explode</item>
        <item>Slide</item>
        <item>Default</item>
    </string-array>
    <string name="settings_cache_size">Http disk cache size</string>
    <string name="settings_daynight_mode">Day night mode</string>
    <string-array name="settings_daynight_names">
        <item>Follow System</item>
        <item>Day Mode</item>
        <item>Night Mode</item>
        <item>Follow Battery Saver Mode</item>
    </string-array>
    <string name="settings_high_quality">Auto choose high quality image when download</string>
    <string name="settings_high_quality_off">The same width &amp; height Jpeg (small size)</string>
    <string name="settings_high_quality_on">High quality Png / Jpeg (large size)</string>
    <string name="settings_host_ip">Custom DNS</string>
    <string name="settings_host_ip_address">Custom DNS IP</string>
    <string name="settings_host_ip_address_default">Default: %1$s</string>
    <string name="settings_host_ip_off">System DNS</string>
    <string name="settings_host_ip_on">Custom DNS</string>
    <string name="settings_list_info">Disable info tip in images list</string>
    <string name="settings_list_info_off">Enable</string>
    <string name="settings_list_info_on">Disable</string>
    <string name="settings_list_page">Disable pager navigation in images list</string>
    <string name="settings_list_page_off">Enable</string>
    <string name="settings_list_page_on">Disable</string>
    <string name="settings_list_quality">Auto choose high quality image in image list</string>
    <string name="settings_list_quality_off">Sample (fast)</string>
    <string name="settings_list_quality_on">High quality (slow)</string>
    <string name="settings_preview_color">Dynamic preview background color</string>
    <string name="settings_preview_color_off">Default</string>
    <string name="settings_preview_color_on">With image tint</string>
    <string name="settings_safe_mode">Show all rating images</string>
    <string name="settings_safe_turn_off">Safe</string>
    <string name="settings_safe_turn_on">All</string>

    <string name="user_avatar">Avatar</string>
    <string name="user_change_email">Change Email</string>
    <string name="user_change_pwd">Change Password</string>
    <string name="user_email">Email</string>
    <string name="user_login">Login</string>
    <string name="user_logout">Logout</string>
    <string name="user_name">Name</string>
    <string name="user_pwd">Password</string>
    <string name="user_pwd_confirm">Confirm Password</string>
    <string name="user_pwd_current">Current Password</string>
    <string name="user_pwd_diff">Two passwords are different.</string>
    <string name="user_register">Register</string>
    <string name="user_reset">Reset Password</string>
</resources>
