<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <ListPreference
        android:defaultValue="-1"
        android:entries="@array/settings_daynight_names"
        android:entryValues="@array/settings_daynight_values"
        android:icon="@drawable/ic_daynight"
        android:key="app.day_night_mode"
        android:title="@string/settings_daynight_mode"
        app:useSimpleSummaryProvider="true" />
    <SwitchPreference
        android:defaultValue="true"
        android:icon="@drawable/ic_safe"
        android:key="app.safe_mode"
        android:summaryOff="@string/settings_safe_turn_off"
        android:summaryOn="@string/settings_safe_turn_on"
        android:title="@string/settings_safe_mode" />
    <SeekBarPreference
        android:defaultValue="256"
        android:icon="@drawable/ic_storage"
        android:key="app.cache_size"
        android:max="2048"
        android:title="Disk Cache Size"
        app:min="256"
        app:showSeekBarValue="true" />
</PreferenceScreen>